fix: comment section overflow -> scroll

--- a/front/src/css/today.css
+++ b/front/src/css/today.css
@@ -53,7 +53,7 @@
 
 /*  */
 .phrase-transparent {
-  opacity: 0;
+  display: none;
 }
 
 /* Villager selector as dropdown menu*/
@@ -90,6 +90,7 @@
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #ffb9ed;
   font-family: TmoneyRoundWindExtraBold;
+  z-index: 1;
 }
 .menu > button:hover {
   opacity: 0.8;
@@ -98,7 +99,7 @@
   margin-top: 5px;
   margin-bottom: -50px;
   margin-right: -100vw;
-  z-index: 100;
+  z-index: 1;
 }
 
 /* Comment inputbox */
@@ -179,8 +180,13 @@ div.comment {
 
 /*  Comment Section */
 .comment-section {
-  z-index: 0;
+  height: 50vh;
+  overflow: scroll;
 }
+.comment-section::-webkit-scrollbar {
+  display: none;
+}
+
 .comment-box {
   width: 100%;
   height: 50px;
